FIX: auth and otp
